--- a/css/style.css
+++ b/css/style.css
@@ -4,16 +4,29 @@ html {
     scroll-behavior: smooth;
 }
 
+/* Wrapper */
+.wrapper {
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: repeat(1,1fr);
+    grid-template-rows: repeat(auto,1fr);
+}
+
+
 /* Body */
  body {
      margin: 0;
+     background: url(../images/background.jpg);
+     background-position: center;
+     background-size: cover;
+     background-attachment: fixed;
  }
 
 /* Nav Bar */
 nav {
     width: 100%;
     height: 50px;
-    background-color: rgba(180, 217, 234, 0.69);
+    background-color: rgba(97, 96, 96, 0.69);
     position: fixed;
 }
 
@@ -39,17 +52,14 @@ nav ul li a {
 /* Hover */
 
 nav ul li a:hover {
-    background-color: #f92b2b;
-    /* #f7f304 */
     color: white;
-    border-radius: 10px;
 }
     
 
 
 /* Header */
-#Home {
-    background: linear-gradient(rgba(16, 14, 14, 0.39) , rgba(134, 128, 128, 0.28)), url(../images/display.jpg);
+#home {
+    background: url(../images/display.jpg);
     width: 100%;
     height: 100vh;
     background-position: center;
@@ -70,7 +80,7 @@ nav ul li a:hover {
 
 
 /* About */
-#Abt {
+#abt {
     width: 100%;
     height: 100vh;
     background-color: #dccacab5;
@@ -81,14 +91,14 @@ nav ul li a:hover {
 .paragraph {
     text-align: center;
     margin-top: 0px;
-    padding-top: 30vh;
+    padding-top: 10%;
     width: 50%;
-    font-size: 30px;
-    padding-left: 350px;
+    font-size: 200%;
+    padding-left: 27%;
 }
 
 /* Education */
-#Edu {
+#edu {
     width: 100%;
     height: 100vh;
     background-color: #d8d8d8b5;
@@ -109,7 +119,7 @@ nav ul li a:hover {
 
 
 /* Skills */
-#Skill {
+#skill {
     width: 100%;
     height: 100vh;
     background-color: #d8d8d8b5;
@@ -150,7 +160,7 @@ nav ul li a:hover {
 
 
 /* Accomplishments */
-#Awards {
+#awards {
     width: 100%;
     height: 100vh;
     background-color: #d8d8d8b5;
@@ -174,10 +184,10 @@ nav ul li a:hover {
 
 
 /* Projects */
-#Projects {
+#projects {
     width: 100%;
     height: 100vh;
-    background-color: #d8d8d8b5;
+    background-color: #c5c2c2e8;
     text-align: center;
     padding-top: 10vh;
     box-shadow: 5px 5px 5px;
@@ -185,11 +195,15 @@ nav ul li a:hover {
 
 .project {
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 20px;
     padding: 40px;
   }
   .project-grid {
-    background-color: rgba(255, 255, 255, 0.8);
+    background-image: url(../images/Wild-HD-Wallpaper.jpg);
+    background-position: center;
+    background-size: contain;
+    background-attachment: fixed;
     border: 1px solid rgba(0, 0, 0, 0.8);
     padding: 40px;
     font-size: 30px;
@@ -199,7 +213,7 @@ nav ul li a:hover {
 
 
 /* Contact Details */
-#Con {
+#con {
     width: 100%;
     height: 60vh;
     background-color: #d8d8d8b5;
@@ -237,6 +251,11 @@ html {
  .wrapper {
      display: grid;
      width: 100%;
+ }
+
+ .header-state {
+     font-size: 15px;
+     letter-spacing: 5px;
  }
 
 /* Nav Bar */
@@ -283,7 +302,7 @@ nav ul li a:hover {
 
 
 /* Header */
-#Home {
+#home {
     background-image: url(../images/display.jpg);
     width: 100%;
     height: 100vh;
@@ -295,33 +314,31 @@ nav ul li a:hover {
 
 
 /* About */
-#Abt {
+#abt {
     width: 100%;
     height: 100vh;
-    background-color: aquamarine;
     font-family: 'Open Sans Condensed', sans-serif;
 }
 
 .paragraph {
     text-align: center;
     margin-top: 0px;
-    padding-top: 20vh;
+    padding-top: 10%;
     width: 50%;
-    font-size: 28px;
-    padding-left: 250px;
+    font-size: 20px;
+    padding-left: 27%;
 }
 
 /* Education */
-#Edu {
+#edu {
     width: 100%;
     height: 100vh;
-    background-color: #a8ff7f;
     
 }
 
 .edu {
     text-align: center;
-    font-size: 18px;
+    font-size: 16px;
     line-height: 10px;
     padding-top: 2vh;
     padding-left: 90px;
@@ -329,18 +346,20 @@ nav ul li a:hover {
 
 .edu img {
     border-radius: 40px;
+    width: 100px;
+    height: 70px;
+    display: none;
 }
 
 
 
 /* Skills */
-#Skill {
+#skill {
     width: 100%;
-    height: 100vh;
-    background-color: rgba(253, 168, 221, 0.979);
+    height: 150vh;
 }
 
-#Skill h1 {
+#skill h1 {
     margin-top: 0;
 }
 
@@ -350,15 +369,17 @@ nav ul li a:hover {
     padding-top: 2px;
 }
 
+
+
 .logo {
-    width: 100px;
-    height: 100px;
+    width: 70px;
+    height: 70px;
     transition: width 1s ease-out, height 1s ease-out;
 }
 
 .logo:hover {
-    width: 120px;
-    height: 120px;
+    width: 90px;
+    height: 90px;
     transition: width 2s ease-out, height 2s ease-out;
 }
 
@@ -378,10 +399,9 @@ nav ul li a:hover {
 
 
 /* Accomplishments */
-#Awards {
+#awards {
     width: 100%;
-    height: 100vh;
-    background-color: rgb(113, 218, 110);
+    height: 150vh;
     text-align: center;
     padding-top: 2vh;
 }
@@ -408,10 +428,9 @@ nav ul li a:hover {
 
 
 /* Projects */
-#Projects {
+#projects {
     width: 100%;
-    height: 100vh;
-    background-color: darksalmon;
+    height: 150vh;
     text-align: center;
     padding-top: 10vh;
 }
@@ -434,10 +453,9 @@ nav ul li a:hover {
 
 
 /* Contact Details */
-#Con {
+#con {
     width: 100%;
-    height: 60vh;
-    background-color: rgb(121, 248, 82);
+    height: 110vh;
     text-align: center;
     padding-top: 3vh;
 }
@@ -518,7 +536,7 @@ nav ul li a:hover {
 
 
 /* Header */
-#Home {
+#home {
     background-image: url(../images/display.jpg);
     width: 100%;
     height: 180vh;
@@ -542,7 +560,7 @@ nav ul li a:hover {
 
 
 /* About */
-#Abt {
+#abt {
     width: 100%;
     height: 170vh;
     background-color: #dccacab5;
@@ -553,14 +571,14 @@ nav ul li a:hover {
 .paragraph {
     text-align: center;
     margin-top: 0px;
-    padding-top: 50vh;
+    padding-top: 10%;
     width: 50%;
-    font-size: 20px;
-    padding-left: 250px;
+    font-size: 200%;
+    padding-left: 27%;
 }
 
 /* Education */
-#Edu {
+#edu {
     width: 100%;
     height: 170vh;
     background-color: #d8d8d8b5;
@@ -584,14 +602,14 @@ nav ul li a:hover {
 
 
 /* Skills */
-#Skill {
+#skill {
     width: 100%;
     height: 170vh;
     background-color: #d8d8d8b5;
     box-shadow: 5px 5px 5px;
 }
 
-#Skill h1 {
+#skill h1 {
     margin: 0;
 }
 
@@ -644,7 +662,7 @@ nav ul li a:hover {
 
 
 /* Accomplishments */
-#Awards {
+#awards {
     width: 100%;
     height: 170vh;
     text-align: center;
@@ -654,7 +672,7 @@ nav ul li a:hover {
     box-shadow: 5px 5px 5px;
 }
 
-#Awards h1 {
+#awards h1 {
     margin-top: 0;
     margin-bottom: 0;
 }
@@ -681,10 +699,10 @@ nav ul li a:hover {
 
 
 /* Projects */
-#Projects {
+#projects {
     width: 100%;
     height: 190vh;
-    background-color: #d8d8d8b5;
+    background-color: #c5c2c2e8;
     box-shadow: 5px 5px 5px;
     text-align: center;
     padding-top: 0vh;
@@ -715,7 +733,7 @@ nav ul li a:hover {
 
 
 /* Contact Details */
-#Con {
+#con {
     width: 100%;
     height: 100vh;
     background-color: #d8d8d8b5;
