--- a/scss/partials/_helpers.scss
+++ b/scss/partials/_helpers.scss
@@ -177,3 +177,35 @@
 .lorem:hover  {
    opacity: 1; 
 }
+
+.icons {
+    text-align: center;
+    background-color: #74adc8;
+
+    .icon-item {
+        margin: 10px;
+        border-radius: 50%;
+    }
+
+    a {
+        color: white;
+        font-size: 30px;
+    }
+}
+
+.footer {
+    
+    p {
+        text-transform: uppercase;
+        text-align: center;
+        margin-bottom: 0;
+    }
+
+    hr {
+        margin: 0;
+        color: rgb(12, 166, 255);
+        height: 1px;
+        margin: auto 90vh;
+    }
+}
+
