--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,10 @@
   font-family: "Dosis";
   src: url(../fonts/Dosis/Dosis-Regular.ttf);
 }
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: "Saira Extra Condensed" !important;
   margin: 0;
@@ -33,7 +37,7 @@ header {
 }
 
 nav {
-  height: 50px;
+  height: 40px;
   background-color: rgba(255, 255, 255, 0.8);
 }
 nav ul {
@@ -184,8 +188,8 @@ footer h3 {
 
 .arrow-down {
   position: absolute;
-  transform: translate(45vh, 13vh);
-  color: #000000fc;
+  transform: translate(1278%, 411%);
+  color: white;
   font-size: 50px !important;
   text-shadow: 2px 2px 2px #74adc8;
 }
@@ -339,6 +343,9 @@ footer h3 {
   color: white;
   font-size: 30px;
 }
+.icons a:hover {
+  text-decoration: none !important;
+}
 
 .footer p {
   text-transform: uppercase;
@@ -354,16 +361,58 @@ footer h3 {
 
 #button {
   transition: background-color 0.5s, visibility 0.7s, opacity 0.7s;
-  background-color: #a88d7b;
-  border-radius: 5px;
+  background-color: #007bff;
+  border-radius: 50%;
   text-align: center;
   visibility: hidden;
   position: fixed;
-  padding: 15px;
+  font-size: 25px;
+  padding: 10px 17px;
   z-index: 500;
   right: 25px;
   opacity: 0;
   top: 530px;
+  color: white;
+}
+
+#button.show {
+  visibility: visible;
+  opacity: 1;
+}
+
+.download {
+  padding: 10px;
+  background-color: #00bbff;
+  margin: 10px;
+  font-weight: bold;
+  letter-spacing: 1px;
+  font-size: 20px;
+  border-radius: 5px;
+  color: white;
+  position: absolute;
+  transform: translate(20%, -105%);
+  transition: all 0.5s ease-in-out;
+}
+
+.download:hover {
+  text-decoration: none;
+}
+
+.bootstrap {
+  text-align: center;
+  margin-bottom: 0 !important;
+}
+
+.row {
+  margin: 10px 200px !important;
+}
+
+.toggle {
+  display: none;
+  z-index: 1000;
+  font-size: 20px;
+  color: gray;
+  padding: 10px 15px;
 }
 
 @media (max-width: 790px) and (min-width: 600px) {
