--- a/scss/partials/_bases.scss
+++ b/scss/partials/_bases.scss
@@ -1,5 +1,9 @@
 // MY Tags
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: 'Saira Extra Condensed' !important;
     margin: 0;
@@ -25,7 +29,7 @@ header {
 }
 
 nav {
-    height: 50px;
+    height: 40px;
     background-color: rgba(255, 255, 255, 0.8);
 
     ul {
