--- a/scss/partials/_bases.scss
+++ b/scss/partials/_bases.scss
@@ -51,6 +51,7 @@ nav {
         // color: #335eeb;
         font-size: 19px;
         color: black;
+        // color: #949292 ;
         text-transform: uppercase;
         letter-spacing: .5px;
     }
