--- a/scss/partials/_helpers.scss
+++ b/scss/partials/_helpers.scss
@@ -56,6 +56,7 @@
 .accom-h1 {
     text-align: center;
     border-bottom: 1px solid rgb(12, 166, 255);
+    text-transform: uppercase;
 }
 
 .accomplishments {
@@ -66,8 +67,13 @@
     }
 }
 
-.project {
+.projects {
     text-align: center;
+    
+
+    h1 {
+        text-transform: uppercase;
+    }
 }
 
 .project-h1 {
