--- a/css/main.css
+++ b/css/main.css
@@ -198,10 +198,10 @@ footer h3 {
   width: 300px;
   height: 300px;
   background-color: #74adc8;
-  background-image: url(../images/my_pics/west.jpg);
-  background-size: cover;
+  background-image: url(../images/my_pics/khanyi.JPG);
+  background-size: 150%;
   border-radius: 10px;
-  background-position-x: -25px;
+  background-position-x: -55px;
 }
 
 .about-h1 {
