increase toggleNav width

--- a/css/main.css
+++ b/css/main.css
@@ -549,11 +549,12 @@ footer h3 {
 
   #toggleNav.active {
     display: initial !important;
+    width: 102%;
   }
 
   .toggle {
     display: initial !important;
-    padding-left: 60px;
+    padding-left: 87px;
   }
 
   .about-me {
