--- a/scss/partials/_responsive-design.scss
+++ b/scss/partials/_responsive-design.scss
@@ -156,12 +156,13 @@
     
     #toggleNav.active {
         display: initial !important;
+        width: 102%;
     }
 
     
     .toggle {
         display: initial !important;
-        padding-left: 60px;
+        padding-left: 87px;
     }
 
     .about-me {      
